--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Clase de Git</title>
 </head>
 <body>
     <h1>Estamos aprendiendo Git y GitHub</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, ad porro corporis vel maxime blanditiis sed veritatis deserunt debitis dolorum laboriosam dicta est repudiandae! Magni ullam saepe possimus et culpa</p>
+    <h2>Subtitulo</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus odio ducimus saepe delectus corporis expedita nulla reprehenderit repellendus inventore nesciunt voluptates recusandae amet, similique quasi enim iusto autem nisi quod!</p>
+    <img src="" alt="">
 </body>
 </html>
